2009-04-09  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Reverted previous patch and provided the correct
	fix in SOGoMailFolder: -postData:flags:
	* Fixed the compilation of unit tests for NGCards.

2009-04-09  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject
	-sendMail]): create the Sent folder if it doesn't exist.

2009-04-07  Cyril Robert <crobert@inverse.ca>

	* UI/Common/UIxPageFrame.m (isCompatibleBrowser): Fixed Safari 3 issue,
	was only accepting 4+

2009-04-06  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Improved the sogod-wrapper script in order to
	consider the IP address that can be specified
	in the WOPort user default. Patch from
	Romain LE DISEZ <romain.ledisez@netensia.fr>
	* SoObjects/SOGo/LDAPSource.{h.m}: Now possible to
	specify a scope for LDAP operations. Patch from
	Yann Cezard <yann.cezard@univ-pau.fr>

2009-04-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m: we now support an "encryption"
	parameter, having either a value of "ssl" or "starttls" to define
	the type of encryption to be used, if any.

2009-04-01  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Dropped worthless tools
	* Fixed tons of compiler warnings
	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder appendObject:withBaseURL:
	toREPORTResponse:]): We now check if we've got
	an exception when looking up contacts and the LDAP-part
	of SOGo is misconfigured and warn the admin (by adding
	a log entry) about it.
	
2009-03-31  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	_fetchFieldsforComponentOfType:]): the method _fixDates must be
	called even for the month view.

2009-03-25  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -siteFavicon]): new
	method to allow the customization of the site favicon through the
	user defaults SOGoFaviconRelativeURL.
